tests/NormalTests/paczka1/fuzzy1/42776249.err
Error in line 1: SZzcF32PS A104 21,5
Error in line 5: Qa9C0WiJTIq S633 72,2
Error in line 4: SZzcF32PS S633 51,1
Error in line 14: Qa9C0WiJTIq A104 120,8
Error in line 15: Qa9C0WiJTIq A859 54,3
Error in line 17: A104 S960 11,2
Error in line 30: sk2tozB A104 87,2
